# kent_repertory_etl

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  logging_config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  requirements.txt
data/raw/: kent0000_P1.html  kent0005_P6.html  kent0010_P11.html  kent0015_P16.html  kent0020_P21.html  kent0025_P26.html  kent0030_P31.html  kent0035_P36.html  kent0040_P41.html  kent0045_P46.html  kent0050_P51.html  kent0055_P56.html  kent0060_P61.html  kent0065_P66.html  kent0070_P71.html  kent0075_P76.html  kent0080_P81.html  kent0085_P86.html  kent0090_P91.html  kent0095_P96.html  kent0100_P101.html  kent0105_P106.html  kent0110_P111.html  kent0115_P116.html  kent0120_P121.html  kent0125_P126.html  kent0130_P131.html  kent0135_P136.html  kent0140_P141.html  kent0145_P146.html  kent0150_P151.html  kent0155_P156.html  (+253 more)
docs/: architecture.md
scripts/: download_pages.py
src/: db_loader.py  extractor.py  extractor_utils.py  loader.py  loader_utils.py  logging_setup.py  main.py  models.py  processing_utils.py  remedy_parser.py  requirements.txt  rubric_parser.py  scraper.py  scraper_utils.py  text_utils.py  transformer.py  transformer_utils.py  utils.py
tests/: test_dynamic_section_extraction.py  test_edge_cases.py  test_extractor.py  test_group_by_page.py  test_malformed_html.py  test_page_break_helpers.py  test_parse_directory.py  test_parser.py  test_parser_edge_cases.py  test_related_rubrics.py  test_rubric_boundaries.py  test_scraper.py  test_text_cleaning.py
